src/test/resources/invalid/syntaxErr/loops/forInsufficientArgs.wacc
# for must have all arguments

# Output:
# #syntaxError#

# Exit:
# 100

# Program:

begin
  for (char i = 0; i < 1; ) do
    println i
  done
end